# news-notifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  alembic.ini  compose.sh  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  security.py  sources_seed.py
app/api/: main.py  schemas.py
app/api/routes/: markets.py  news.py  scrape_failures.py
app/api/static/: demo.html  ui.html
app/db/: models.py  session.py
app/dedup/: simhash.py  vector_dedup.py
app/delivery/: telegram.py  webhook.py
app/llm/: client.py  embeddings.py  extraction.py  query_gen.py  schemas.py
app/scoring/: credibility.py
app/scraping/: playwright_scraper.py
app/scraping/extractors/: __init__.py  msn.py
app/search/: aggregator.py  duckduckgo.py  gdelt.py  google_news_rss.py
app/worker/: batching.py  job_ids.py  scheduler.py  settings.py  tasks.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_scrape_failures.py  0003_news_batches.py  0004_delivery_watermark.py  0005_telegram_delivery.py
tests/: test_api_routes.py  test_credibility.py  test_dedup.py  test_extraction.py  test_extractors.py  test_llm_client_http.py  test_market_update.py  test_news_route.py  test_query_gen.py  test_scheduling.py  test_search_merge.py  test_security.py  test_telegram.py  test_webhook.py  test_worker_errors.py  test_worker_filters.py
windows/: README.md  setup.ps1  start-api.ps1  start-llm.ps1  start-worker.ps1
