[project]
name = "news-notifier"
version = "0.1.0"
description = "Reactive news-monitoring agent for prediction markets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "playwright>=1.47",
    "trafilatura>=1.12",
    "feedparser>=6.0",
    "pgvector>=0.3",
    "cryptography>=43.0",
    "ddgs>=9.0",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# auto mode runs bare `async def test_*` functions without requiring the
# @pytest.mark.asyncio marker on each; existing marked tests are unaffected.
asyncio_mode = "auto"
